# am_trend_analysis_data_collection

./: .gitignore  Pre-exploratory.ipynb  README.md  Twitter Data Collection Exploratory NB.ipynb  breakpointdates.txt  interract_with_prefect.py  prefect.yaml  pyproject.toml  unique_tweet_records.csv
.ipynb_checkpoints/: Pre-exploratory-checkpoint.ipynb  Twitter Data Collection Exploratory NB-checkpoint.ipynb  Untitled-checkpoint.ipynb  pyproject-checkpoint.toml
data/keyphrase_search_results_raw/archive/: articles_batch_1013_20241227_224524.csv  articles_batch_1_20241227_214540.csv
data/keyphrase_search_results_raw/by_date/: tweets_20250111_000155_01_2023_12_2022.csv  tweets_20250111_014344_12_2022.csv  tweets_20250111_135420_12_2022.csv  tweets_20250111_141634_12_2022.csv  tweets_20250111_174349_12_2022.csv  tweets_20250111_180508_12_2022.csv  tweets_20250111_182534_12_2022.csv  tweets_20250111_214346_12_2022.csv  tweets_20250111_220626_12_2022.csv  tweets_20250111_222809_12_2022.csv  tweets_20250111_224752_12_2022.csv  tweets_20250112_004259_12_2022.csv  tweets_20250112_010141_12_2022.csv  tweets_20250112_015939_12_2022.csv  tweets_20250112_021827_12_2022.csv  tweets_20250112_070743_12_2022.csv  tweets_20250112_072713_12_2022.csv  tweets_20250112_185452_12_2022.csv  tweets_20250112_213752_11_2022.csv  (+45 more)
data/linkedin_archive/: 3Dadept_2024-04-06_15-54-04.json  3Dadept_2024-04-07_09-53-07posts.csv  3Dadept_2024-04-11_16-04-47posts.csv  company_info_2024-04-10_22-58-57.json  followed_companies_info.csv  folowed_comapies_info_raw_2024-04-10_20-44-56.txt
(+6280 files in other folders)
